<resources>
    <string name="app_name">Planet Snakes</string>
    <string name="action_search">Search</string>
    <string name="threat_level">Threat to humans:</string>
    <string name="about">About</string>
    <string name="about_app">This App was inspired by Austin Stevens Snake Adventures and all the contents, including Images and Texts are
    taken from Wikipedia</string>
    <string name="five_rating_bar">Extremely Dangerous Snake</string>
    <string name="four_rating_bar">Highly Dangerous Snake</string>
    <string name="three_rating_bar">Considerably Dangerous Snake</string>
    <string name="two_rating_bar">Dangerous Snake</string>
    <string name="enlarge_image">Click to Enlarge Image</string>
    <string name="feedback">If you wish to give feedback, please send it to: </string>
    <string name="email">theoutstanding09@gmail.com</string>
    <string name="first_aid">First aid for a Snake Bite</string>
    <string name="snake_bite">Snake Bites: First Aid and Treatment</string>
    <string name="snake_identification"><b>Snake Identification: </b>\n\nIdentifying the Snake is very important for planning treatment in Asia, Africa, and South America.
    In other regions (Such as North America and Europe) where Polyvalent antivenoms are available, identification of Snake is not a high priority item.  \n\nKnowing what
    species are present locally can be crucial for treatment. Majority of severe snake bites are caused by Vipers, Kraits, and Cobras.</string>
    <string name="aid"><b>First Aid: </b>\n\nAmerican Medical Association and American Red Cross recommend washing the Snakebite with Soap and
    Water. Traces of the Venom left on the Skin/Bandages can be used in combination with a snake bite identification kit to identify the species of a snake. It\'s very
    Important to keep the victim calm and to restrict movement.</string>
    <string name="pressure_immobilization"><b>Pressure Immobilization: </b>\n\nPresure Immobilization is recommended for snakebites that have
    occurred in Australia (Neurotoxic Snakes). It\'s not recommended for snakebites from Non-neurotoxic Snakes that are found in North America.
    The British Military recommends using Pressure Immobilization in all cases where the type of Snake is Unknown.</string>
    <string name="anti_venom"><b>Antivenom: </b>\n\n<b>Polyvalent snake antivenom</b> is used to treat bites from South American Rattlesnake,
    terciopelo, Saw-scaled Viper, Russells Viper, Common Krait, and Spectacled Cobra. \n\n<b>Taipan antivenom</b> can be used to treat bites from
    Inland Taipan and Coastal Taipan. \n\n<b>INOSERP Pan-Africa (Sub-Sahara)</b> is used to treat bites from Black-necked Spitting Cobra, Black
    Mamba, West African Carpet Viper, African Puff Adders, White-bellied Carpet Viper, Gaboon Viper, Western Green Mamba, Eastern Green Mamba,
    Jameson\'s mamba, Egyptian Cobra, Red Spitting Cobra, and Forest Cobra. \n\n<b>Death Adder Antivenom</b> is used to treat bites form Death
    Adder. \n\n<b>Black Snake Antivenom </b>is used to treat bites from Mulga Snake, Red-bellied Black Snake, Papuan Black Snake, Colletts
    Snake, and Blue-bellied Black Snake. \n\n<b>Tiger Snake Antivenom </b>is used to treat bites from Australian Copperheads, Tiger Snakes,
    Australian Black Snakes, and Rough-scaled Snake. \n\n<b>Brown Snake Antivenom </b>is used to treat bites from Dugite, Spotted Brown Snake,
    Peninsula Brown Snake, Western Brown Snake, Ringer Brown Snake, and Eastern Brown Snake. \n\n<b>INOSERP MENA </b>is used to treat bites from
    Puff Adders, Saharan Horned Viper, Sidewinder, Egyptian Cobra,  West-Asian Blunt-Nosed Viper, Palestine Viper, Red Spitting Cobra,
    Black-Necked Spitting Cobra, Black Desert Cobras, Carpet Vipers, Desert Viper, Sahara Sand Viper, Arabian Horned Viper,
    Macrovipera Lebetina Transmediterranea, Moorish Viper, Nubian Spitting Cobra, Field\'s Horned Viper, Persian Horned Viper, Bornmueller\'s viper,
    Lataste\'s Viper, and Vipera Raddei. \n\n<b>Sea Snake Antivenom </b>is used to treat bites from Yellow-Bellied Sea Snake, Sea Kraits,
    Olive Sea Snake, Turtlehead Sea Snakes, Beaked Sea Snakes, Bighead Sea Snake, Northern Mangrove Sea Snake, and Anomalous Sea Snake. \n\n<b>Vipera Tab </b>is used to treat bites from Vipers. \n\n<b>Polyvalent crotalid antivenin (CroFab—Crotalidae Polyvalent Immune Fab (Ovine)) </b>is
    used to treat bites from North American Pit Vipers including Copperheads, Cottonmouths, and Rattlesnakes. \n\n<b>Soro antibotropicocrotalico </b>is
    used to treat bites from Pit Vipers and Rattlesnakes. \n\n<b>SAIMR polyvalent antivenom </b>is used to treat bites from Mambas, Cobras,
    Rinkhalses, and Puff Adders. \n\n<b>SAIMR echis antivenom </b>is used to treat bites from Saw-Scaled Vipers. \n\n<b>SAIMR Boomslang antivenom </b>is
    used to treat bites from Boomslang. \n\n<b>Antielapidico, Anticoral, Panamerican serum, Anti-mipartitus antivenom,
    Antimicrurus, Anticoral monovalent, Anti-micruricoscorales, and Coralmyn </b>are used to treat bites from Coral Snakes.</string>
    <string name="least_concern_wildlife">Least Concern Wildlife:</string>
    <string name="near_threatened">Near Threatened Wildlife":</string>
    <string name="vulnerable">Vulnerable Wildlife:</string>
    <string name="endangered">Endangered Wildlife:</string>
    <string name="critically_endangered">Critically Endangered Wildlife:</string>
    <string name="data_deficient">Data Deficient:</string>
    <string name="least_concern">The Snakes are widespread and have a healthy population.</string>
    <string name="threatened">The Snakes are Likely to become endangered in the near future.</string>
    <string name="vulnerable_ex">The Snakes are at High risk of endangerment in the wild.</string>
    <string name="endangered_ex">The Snakes are at High risk of extinction in the wild.</string>
    <string name="critically">The Snakes are at Extremely high risk of extinction in the wild</string>
    <string name="data_deficient_ex">Data Deficient indicates that little or no information is available on the abundance and distribution of the Snakes.</string>
    <string name="inland_taipan">Inland Taipan</string>
    <string name="black_mamba">Black Mamba</string>
    <string name="urutu">Urutu</string>
    <string name="black_mamba_distribution"><b>Black Mamba primarily lives in:</b> South Africa,
    Sudan, Ethiopia, Eritrea, Kenya, Eastern Uganda, Tanzania, Burundi, Rwanda, Mozambique,
    Swaziland, Malawi, Zambia, Zimbabwe, Botswana, Democratic Republic of Congo, Namibia,
    Angola, Central African Republic, Chad, Nigeria, Mali. It is not found at altitudes above 1,000 meters (3,300 feet). They like to live in
    neglected open spaces, hollow trees, rock crevices, semi-arid dry savannah, woodland, dense forest, arid desert, termite mounds or burrows</string>
    <string name="first_aid_for_black_mamba_bite"> <b>First Aid:\n</b>
        Keep the bite victim calm and reassured. Allow him or her to lie flat and avoid as much as
        movement possible. \nIf possible, allow the bitten limb to rest at a lower than the victim\'s
        heart. Immediately wrap a large crepe bandage snugly around the bitten limb starting at the site of the bite and working proximally up the limb \(the full length if possible\). The bandage should be as tight as one might bind a sprained ankle.
        Secure the splint to the bandaged limb to keep the limb as rigid and unmoving as possible. \n\nAvoid bending or moving the limb excessively while applying the splint.
        DO NOT remove the splint or bandages until the victim has reached the hospital and is receiving Antivenom.
        Have the South African Institute for Medical Research (S.A.I.M.R.) Polyvalent Antivenom ready for the emergency crew to take with the victim to the hospital.
        <b>Give them the following:</b>\n

                 \n\t1. The available anti venom (at least 10 - 20 vitals)
                 \n\t2. The accompanying instruction (protocol) packet
                 \n\t3. If available, the victim\'s medical packet

        Do not cut or incise the bite
        Do not apply ice to the bite.
    </string>
    <string name="black_mamba_scientific_name"><b>Scientific Name: </b>Dendroaspis polylepis</string>
    <string name="black_mamba_conservation_status"><b>UN Conservation Status: </b>Least Concern Wildlife</string>
    <string name="black_mamba_description"><b>Description: </b>Black Mamba is a large, round-bodied, slender, but powerful snake. It tapers smoothly towards
    the tail. The head is often said to be "coffin-shaped" with a somewhat pronounced brow ridge and a medium-sized eye with fangs up to 6.5 millimeters (0.26 in) in length located at the front of the maxilla
    The adult snake\'s length ranges from 2 meters (6.6 ft) to 3 meters (9.8 ft) routinely but, according to some sources, specimens have grown to lengths of 4.3 to 4.5 meters (14.1 to 14.8 ft).
    \n\nSpecimens vary considerably in color; some are olive-brown to khaki, many are grey, but none are black. Some individuals display dark mottling towards the posterior, which may appear in the form of oblique bars.
    The underbody is often pale yellow or cream colored and the eyes are dark brown to black with a silver or pale yellow corona surrounding the pupil.
    </string>
    <string name="urutu_distribution"><b>Urutu is Native to Argentina, Brazil, Paraguay, and Uruguay.</b>\n\nThe Snake primarily inhabits
    Tropical and Semitropical Forests, Temperate Deciduous Forests, Marshes, Low Lying Swamps, Riparian Zones, Sugarcane Plantations,
    Grasslands, Rocky Terrains, and Open Fields.</string>
    <string name="urutu_scientific_name"><b>Scientific Name: </b>Bothrops alternatus</string>
    <string name="urutu_conservation_status"><b>Conservation Status: </b>The Snake has not yet been evaluated/classified by any Agency.</string>
    <string name="urutu_common_name">Common Name\'s include Wutu, Halbmondlanzenotter, and Crossed Pit Viper. It\'s called víbora de la cruz and yarará grande
    in Argentina, In Brazil it is called boicoatiara, boicotiara (Tupi dialect), coatiara, cotiara (southern Brazil), cruzeira, cruzeiro, jararaca de agosto
    (Rio Grande do Sul, Lagoa dos Patos region), jararaca rabo-de-porco (Rio Grande do Sul), and urutu. In Paraguay it is called mbói-cuatiá,
    mbói-kwatiara (Gí dialect), and yarará acácusú (Guaraní dialect). In Uruguay it is referred to as crucera, víbora de la cruz and yarará.</string>
    <string name="urutu_description"><b>Description: </b>Large and stout, this terrestrial species reportedly exceeds 2 m (6.6 ft) in total
    length, although the verified maximum is 169 cm (67 in). Most specimens are 80 to 120 cm (31 to 47 in) in total length, with female
    being significantly longer and heavier than males. \n\nThe color pattern is exceedingly variable. The ground color may be brown, tan or
    gray, sometimes with an olive cast. The top of the head is usually chocolate brown to almost black with a range of transverse and
    longitudinal tan to white markings.It looks like a boa constrictor. \n\nOn the body, there is a series of 22-28 dorsolateral markings
    that are chocolate brown to black in color and boldly bordered in cream or white. Along the vertebral line, these markings may either
    oppose or alternate. Each marking is widened and invaded from underneath by the paler ground color so that it either looks like a cross,
    encloses a darker blotch, or divides the marking into three parts to give it the shape of a headphone. \n\nOn the tail, the pattern fuses
    to form a zigzag pattern. In some specimens, the pattern is so concentrated that there is no difference in color between the markings and
    the interspaces. The ventral surface includes a dark brown to black stripe that starts at the neck and runs down to the tail tip.</string>
</resources>