<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_info"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/urutu"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/urutu" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enlarge_image"
            android:layout_below="@id/urutu"
            android:layout_marginTop="10dp"
            android:textSize="9sp"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/urutu"
            android:layout_marginTop="90dp"
            android:text="@string/threat_level" />

        <RatingBar
            android:id="@+id/urutu_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/urutu"
            android:layout_marginTop="112dp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@android:color/white"
            android:progressTint="@android:color/holo_red_dark"
            android:secondaryProgressTint="@android:color/holo_red_dark"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/snake_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/urutu"
            android:layout_marginTop="30dp"
            android:text="@string/urutu"
            android:textColor="#143781" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/urutu"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="60dp"
            android:text="@string/urutu_scientific_name"
            android:textColor="#143781" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/urutu_rating"
            android:layout_marginTop="20dp"
            android:background="#ec6bc1" />

        <TextView
            android:id="@+id/distribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line"
            android:layout_marginTop="20dp"
            android:text="@string/urutu_distribution" />

        <TextView
            android:id="@+id/conservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/distribution"
            android:layout_marginTop="20dp"
            android:text="@string/urutu_conservation_status" />

        <TextView
            android:id="@+id/common_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/conservation"
            android:layout_marginTop="20dp"
            android:text="@string/urutu_common_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urutu_description"
            android:layout_below="@id/common_name"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

</ScrollView>