<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_info"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/black_mamba"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/black_mamba" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enlarge_image"
            android:layout_below="@id/black_mamba"
            android:layout_marginTop="10dp"
            android:textSize="9sp"
            android:layout_centerInParent="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/threat_level"
            android:layout_below="@id/black_mamba"
            android:layout_marginTop="90dp"
            android:id="@+id/textView" />

        <RatingBar
            android:id="@+id/black_mamba_rating"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/black_mamba"
            android:layout_marginTop="112dp"
            android:isIndicator="true"
            android:numStars="5"
            android:progressBackgroundTint="@android:color/white"
            android:progressTint="@android:color/holo_red_dark"
            android:secondaryProgressTint="@android:color/holo_red_dark"
            android:stepSize="0.1" />

        <TextView
            android:id="@+id/snake_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/black_mamba"
            android:layout_marginTop="30dp"
            android:text="@string/black_mamba"
            android:textColor="#143781" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_mamba_scientific_name"
            android:layout_marginTop="14dp"
            android:textColor="#143781"
            android:layout_below="@+id/snake_name"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/black_mamba_rating"
            android:layout_marginTop="20dp"
            android:background="#ec6bc1" />

        <TextView
            android:id="@+id/distribution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_mamba_distribution"
            android:layout_below="@id/line"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/conservation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_mamba_conservation_status"
            android:layout_below="@id/distribution"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/firstaid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_aid_for_black_mamba_bite"
            android:layout_below="@id/conservation"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/black_mamba_description"
            android:layout_below="@id/firstaid"
            android:layout_marginTop="20dp"/>

    </RelativeLayout>

</ScrollView>