<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snake_bite"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textColor="#04043d"/>

        <TextView
            android:id="@+id/snake_identification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/snake_identification"
            android:layout_marginTop="50dp"/>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/snake_identification"
            android:layout_marginTop="15dp"
            android:background="#ec6bc1" />

        <TextView
            android:id="@+id/aid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aid"
            android:layout_below="@id/snake_identification"
            android:layout_marginTop="30dp"/>

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/aid"
            android:layout_marginTop="15dp"
            android:background="#ec6bc1" />

        <TextView
            android:id="@+id/pressure_immobilization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pressure_immobilization"
            android:layout_below="@id/aid"
            android:layout_marginTop="30dp"/>

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@id/pressure_immobilization"
            android:layout_marginTop="15dp"
            android:background="#ec6bc1" />

        <TextView
            android:id="@+id/anti_venom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anti_venom"
            android:layout_below="@id/pressure_immobilization"
            android:layout_marginTop="30dp"/>

    </RelativeLayout>

</ScrollView>